entity_macros/tests/ui/derive/ent/duplicate-id.stderr
error: Already have an id elsewhere
 --> $DIR/duplicate-id.rs:9:5
  |
9 |     id2: Id,
  |     ^^^
